--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
       {
         "ts": "never"
       }
-    ]
+    ],
+    "indent": ["error", 4]
   },
   "settings": {
     "import/resolver": {
